k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dateproxy-test
  labels:
    name: dateproxy-test
