k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dateproxy
  namespace: dateproxy-test
  labels:
    app: dateproxy
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: dateproxy
    weight: 100
  wildcardPolicy: None
